href fix and headers

--- a/Tarkvara-arendusprotsess/SDLC/spiral.html
+++ b/Tarkvara-arendusprotsess/SDLC/spiral.html
@@ -6,6 +6,8 @@
     <title>Spiral</title>
 </head>
 <body>
+    <h1>Spiral</h1>
+
     <p>
         Spiraalne mudel on riskipõhine protsessimudel. See SDLC mudel aitab rühmal võtta üle ühe või mitme protsessimudeli elemente, nagu veeris, järkjärguline, veeris jne. <br>
         Spiraaltehnika on kiire prototüüpimise ja disaini ning arendustegevuste üheaegsuse kombinatsioon.<br>
