Case leht ja SDLC plussid&miinused

--- a/Tarkvara-arendusprotsess/SDLC/index2.html
+++ b/Tarkvara-arendusprotsess/SDLC/index2.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 
-<h1>Konspekt</h1>
-<h2>Robin Aas TARpe22</h2>
-
+<h1>Case Models</h1>
 <body>
     <ul>
-        <li><a href="index1.html" id="ilinkcolor">SDLC</a></li>
-        <li><a href="index2.html" id="ilinkcolor">Case</a></li>
+        <li><a href="info.html" id="ilinkcolor">Info Case vahendite kohta</a></li>
+        <li><a href="graafiline.html" id="glinkcolor">Graafilised Case vahendid</a></li>
+        <li><a href="Textual.html" id="tlinkcolor">Textual Case vahendid</a></li>
     </ul>
 </body>
 </html>
