--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -15,6 +15,8 @@
     <ul>
         <li><a href="index1.html" id="ilinkcolor">SDLC</a></li>
         <li><a href="index2.html" id="ilinkcolor">Case</a></li>
+        <li><a href="proge.html" id="prlinkcolor">Programmeerimisstiilid</a></li>
+
     </ul>
 </body>
 </html>
