--- a/Tarkvara-arendusprotsess/SDLC/Textual.html
+++ b/Tarkvara-arendusprotsess/SDLC/Textual.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Textual CASE</title>
+    <title>Upper CASE</title>
 </head>
 <body>
     <h1>
-        Textual CASE-vahendid:
+        Upper CASE-tools:
     </h1>
 
     <p>
-        IBM Rational Rose: Rational Rose on textual CASE-vahend, mis võimaldab modelleerida süsteemi tekstipõhiselt. See toetab UML-i ja pakub võimalusi klasside, objektide ja süsteemi struktuuri kirjeldamiseks.<br />
-        <br />
-        Enterprise Architect: See CASE-vahend võimaldab kirjutada ja hallata tekstipõhiseid mudeleid. Enterprise Architect toetab mitmesuguseid programmeerimiskeeli ja on tuntud oma võime poolest automatiseerida koodigeneratsiooni.<br />
-        <br />
-        Visual Paradigm: Visual Paradigm on CASE-vahend, mis võimaldab tekstuaalselt kirjeldada ja modelleerida süsteemi. See toetab erinevaid standardite nagu BPMN ja SysML ning pakub ka koodigeneratsiooni võimalusi.<br />
+        Upper CASE tools are designed for the early stages of the SDLC, and are used for project planning, systems analysis and general systems design.<br />
+        Upper CASE tools help diagram and define the current system and the proposed system and these include requirements and design support tools.<br />
     </p>
 </body>
 </html>
