--- a/Tarkvara-arendusprotsess/SDLC/graafiline.html
+++ b/Tarkvara-arendusprotsess/SDLC/graafiline.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graafilised CASE</title>
+    <title>Lower CASE</title>
 </head>
 <body>
-    <h1>Graafilised CASE/vahendid</h1>
+    <h1>Lower CASE</h1>
 
     <p>
-        Graafilised CASE-vahendid:<br />
-        <br />
-        Microsoft Visio: Visio võimaldab arendajatel luua graafilisi esitusi protsessidest, andmemudelitest ja süsteemiarhitektuurist. See aitab paremini mõista süsteemi struktuuri ja suhteid.<br />
-        <br />
-        Lucidchart: Lucidchart on pilvepõhine graafikatööriist, mis võimaldab meeskonnaliikmetel koos töötada süsteemide mudelite loomisel. See toetab mitmesuguseid diagramme, sealhulgas andmevooge ja UML-i.<br />
-        <br />
-        Dia: Dia on avatud lähtekoodiga graafiliste diagrammide redaktor, mis toetab erinevaid diagrammityüpe, nagu voogdiagrammid, andmemudelid ja võrgujoonised.<br />
+        Lower CASE-tools:<br />
+        Lower CASE tools are designed for the back-end of the SDLC and are used for detailed systems design, system implementation and system support.
+        The most common Lower CASE tools are the code generators, but others include compilers and test support tools.
+
     </p>
 </body>
 </html>
