--- a/Tarkvara-arendusprotsess/SDLC/index2.html
+++ b/Tarkvara-arendusprotsess/SDLC/index2.html
@@ -12,8 +12,8 @@
 <body>
     <ul>
         <li><a href="info.html" id="ilinkcolor">Info Case vahendite kohta</a></li>
-        <li><a href="graafiline.html" id="glinkcolor">Graafilised Case vahendid</a></li>
-        <li><a href="Textual.html" id="tlinkcolor">Textual Case vahendid</a></li>
+        <li><a href="graafiline.html" id="glinkcolor">Lower Case vahendid</a></li>
+        <li><a href="Textual.html" id="tlinkcolor">Upper Case vahendid</a></li>
     </ul>
 </body>
 </html>
