--- a/Tarkvara-arendusprotsess/SDLC/info.html
+++ b/Tarkvara-arendusprotsess/SDLC/info.html
@@ -30,6 +30,10 @@
         <br />
         CASE-vahendid on oluline osa tarkvaraarenduse elutsüklist, võimaldades kiiremat, tõhusamat ja paremini hallatavat arendusprotsessi. <br />
         Nende valik sõltub projekti nõuetest ja meeskonna eelistustest.<br />
+        <br />
+        Näited:
+        <br />
+        Rational Rose, Star UML, and Microsoft Visio
     </p>
 
 </body>
