--- a/Tarkvara-arendusprotsess/SDLC/proge.html
+++ b/Tarkvara-arendusprotsess/SDLC/proge.html
@@ -12,64 +12,57 @@
     <p>
         1. Behavior-Driven Development (BDD):<br />
         <br />
-        - BDD keskendub tihedale koostööle arendajate, testijate ja mitte-tehniliste sidusrühmade vahel.<br />
-        - Spetsifikatsioonide kirjutamine enne koodi loomist on oluline osa BDD-st.<br />
-        - Loodud käitumise kirjeldamiseks kasutatakse loomulikku keelt.<br />
-        - Tööriistad nagu Cucumber või Behave aitavad automatiseerida teste nende spetsifikatsioonide alusel.<br />
+        It is a software development process that encourages collaboration among developers, quality assurance experts, and customer representatives in a software project.<br />
+        It encourages teams to use conversation and concrete examples to formalize a shared understanding of how the application should behave.<br />
         <br />
         2. Design-Driven Development:<br />
         <br />
-        - See programmeerimisstiil asetab rõhu disaini kaalutlustele juba arendusprotsessi varases staadiumis.<br />
-        - Eesmärk on luua hästi kujundatud arhitektuur enne koodi kirjutamist.<br />
-        - Kasutab kasutajakeskset lähenemist, tagades, et disain juhiks arendusprotsessi.<br />
+        Design-driven development (DDD) places design at the forefront of product creation.<br />
+        Rather than treating design as a mere aesthetic afterthought, DDD emphasizes its pivotal role in dictating the direction and functionality of software.<br />
         <br />
         3. Domain-Driven Design (DDD):<br />
         <br />
-        - DDD keskendub äridomeeni mõistmisele ja modelleerimisele.<br />
-        - Julgustab koostööd domeeniekspertide ja arendajate vahel.<br />
-        - Kasutab kontseptsioone nagu piiritletud kontekstid, agregaadid ja entiteedid keerulise äridomeeni tõhusaks modelleerimiseks.<br />
+        Domain-driven design (DDD) is a major software design approach, focusing on modeling software to match a domain according to input from that domain's experts.<br />
+        Under domain-driven design, the structure and language of software code (class names, class methods, class variables) should match the business domain. <br />
+        For example: if software processes loan applications, it might have classes like "loan application", "customers", and methods such as "accept offer" and "withdraw".<br />
         <br />
         4. Secure by Design:<br />
         <br />
-        - See lähenemine paneb turvalisuse kaalutlused esikohale kogu arendustsükli vältel.<br />
-        - Tagab, et turvameetmed on disaini ja rakenduse lahutamatu osa.<br />
-        - Eesmärk on ennetada turvariske pigem kui neid pärast rakendamist parandada.<br />
+        Secure by design, in software engineering, means that software products and capabilities have been designed to be foundationally secure.<br />
+        Alternate security strategies, tactics and patterns are considered at the beginning of a software design,<br />
+        and the best are selected and enforced by the architecture, and they are used as guiding principles for developers.<br />
+        It is also encouraged to use strategic design patterns that have beneficial effects on security, even though those design patterns were not originally devised with security in mind.<br />
         <br />
         5. Test-Driven Development (TDD):<br />
         <br />
-        - Hõlmab teste kirjutamist enne tegeliku koodi loomist.<br />
-        - Aitab tagada, et kood vastaks spetsifitseeritud nõuetele.<br />
-        - Julgustab väikest, iteratiivset arendust, keskendudes testide läbimisele.<br />
+        Test Driven Development (TDD) is a software development approach where tests are written before the actual code.<br />
+        It offers several advantages: Comprehensive Test Coverage: TDD ensures that all new code is covered by at least one test, leading to more robust software.<br />
         <br />
         6. Acceptance Test-Driven Development (ATDD):<br />
         <br />
-        - Kesktähelepanu on lõppkasutaja lugude eeltingimuste määratlemisel enne nende rakendamist.<br />
-        - Teste loovad koostöös arendajad, testijad ja ärinõustajad.<br />
-        - Eesmärk on tagada, et välja arendatud funktsioonid vastavad soovitud ärinõuetele.<br />
+        Analogous to test-driven development, Acceptance Test Driven Development (ATDD)<br />
+        involves team members with different perspectives (customer, development, testing)<br />
+        collaborating to write acceptance tests in advance of implementing the corresponding functionality.<br />
         <br />
         7. Continuous Test-Driven Development (CTDD):<br />
         <br />
-        - Laiendab TDD-d, integreerides automatiseeritud teste pideva integreerimise/pideva tarnimise (CI/CD) torusse.<br />
-        - Tagab, et teste käivitatakse pidevalt, kui tehakse koodimuudatusi.<br />
-        - Pakub kiiret tagasisidet muudatuste mõju kohta üldisele süsteemile.<br />
+        Continuous test-driven development (CTDD) is a software development practice that extends test-driven development (TDD) by means of automatic test execution in the background, sometimes called continuous testing.<br />
         <br />
 
         8. Specification by Example:<br />
         <br />
-        - Hõlmab käivitatavate spetsifikatsioonide loomist konkreetsel näitel põhinevalt.<br />
-        - Julgustab sidusrühmade vahelist koostööd nõuete määratlemiseks ja kontrollimiseks näidete kaudu.<br />
-        - Eesmärk on luua ühine arusaam oodatavast süsteemikäitumisest.<br />
+        Specification by example (SBE) is a collaborative approach to defining requirements and business-oriented functional tests for software products based on capturing and illustrating requirements using realistic examples instead of abstract statements.<br />
         <br />
         9. Data-Driven Development:<br />
         <br />
-        - Keskendub otsuste ja süsteemi kujundamisele andmeanalüüsi põhjal.<br />
-        - Kasutab andmeid arendusvalikute, optimeerimiste ja täiustuste juhendamiseks.<br />
+        Data-driven software development is based on solid metrics like Key Performance Indicators (KPIs) or Objectives And Key Results (OKRs).<br />
+        Clear, objective, and unambiguous, these metrics encourage dev teams to think about the long-term strategic objectives of their day-to-day work and the business value of each project.<br />
         <br />
 
         10. Data-Oriented Design:<br />
         <br />
-        - Paneb esikohale tarkvarasüsteemi tõhusa andmetöötluse ja -hoidmise kujundamise.<br />
-        - Rõhutab andmete korraldamist ja struktureerimist rakenduse funktsionaalsuse ja jõudluse toetamiseks.<br />
+        Data-oriented design is a software design approach that focuses on organizing data in a way that makes it easy to access and manipulate.<br />
+        It is based on the idea that data should be the primary focus of a program, rather than the operations or transformations performed on that data.<br />
     </p>
 </body>
 </html>
