--- a/Tarkvara-arendusprotsess/SDLC/graafiline.html
+++ b/Tarkvara-arendusprotsess/SDLC/graafiline.html
@@ -9,9 +9,8 @@
     <h1>Lower CASE</h1>
 
     <p>
-        Lower CASE-tools:<br />
-        Lower CASE tools are designed for the back-end of the SDLC and are used for detailed systems design, system implementation and system support.
-        The most common Lower CASE tools are the code generators, but others include compilers and test support tools.
+        Lower CASE tools are designed for the back-end of the SDLC and are used for detailed systems design, system implementation and system support.<br />
+        The most common Lower CASE tools are the code generators, but others include compilers and test support tools.<br />
 
     </p>
 </body>
