--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -16,6 +16,8 @@
         <li><a href="index1.html" id="ilinkcolor">SDLC</a></li>
         <li><a href="index2.html" id="ilinkcolor">Case</a></li>
         <li><a href="proge.html" id="prlinkcolor">Programmeerimisstiilid</a></li>
+        <li><a href="uml.html" id="ulinkcolor">UML Diagrammid</a></li>
+
 
     </ul>
 </body>
