--- a/Tarkvara-arendusprotsess/SDLC/Textual.html
+++ b/Tarkvara-arendusprotsess/SDLC/Textual.html
@@ -11,8 +11,23 @@
     </h1>
 
     <p>
-        Upper CASE tools are designed for the early stages of the SDLC, and are used for project planning, systems analysis and general systems design.<br />
-        Upper CASE tools help diagram and define the current system and the proposed system and these include requirements and design support tools.<br />
+        Upper CASE tööriistad on loodud SDLC varajaste etappide jaoks ning neid kasutatakse projekti planeerimiseks, süsteemianalüüsiks ja üldiseks süsteemide kujundamiseks.<br />
+        Suurtähtede tööriistad aitavad diagrammi koostada ja defineerida praegust süsteemi ja pakutavat süsteemi ning need hõlmavad nõudeid ja disaini tugitööriistu.<br />
+        <br />
+        <h2>Näited</h2>
+        <h3>Visual Studio:</h3>
+        Seda kasutatakse arvutiprogrammide, sealhulgas veebisaitide, veebirakenduste, veebiteenuste ja mobiilirakenduste arendamiseks.<br />
+        Visual Studio kasutab Microsofti tarkvaraarendusplatvorme, nagu Windows API, Windows Forms, Windows Presentation Foundation, Windows Store ja Microsoft Silverlight. <br />
+        See võib toota nii omakoodi kui ka hallatud koodi.<br />
+        <br />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTqJ4JNIKuIVqmtF2__M_FqopygMQcH9tzrM69UOrZTw&s" height="500" width="600" />
+        <h3>Bugzilla:</h3>
+        Bugzilla on tugev, funktsioonikas ja küps defektide või vigade jälgimise süsteem. <br />
+        Defektide jälgimise süsteemid võimaldavad arendajate meeskondadel oma toodetes tõhusalt jälgida silmapaistvaid vigu, probleeme, probleeme, täiustusi ja muid muudatusi. <br />
+        Lihtsad defektide jälgimise võimalused on sageli sisse ehitatud integreeritud lähtekoodihalduskeskkondadesse, nagu GitHub või muudesse veebipõhistesse või lokaalselt installitud ekvivalentidesse. <br />
+        Leiame, et organisatsioonid pöörduvad Bugzilla poole, kui nende süsteemide võimalused kasvavad välja – näiteks seetõttu, et nad soovivad töövoohaldust või vigade nähtavuse kontrolli (turvalisust) või kohandatud välju.<br />
+        <br />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Buggie_new.png" height="500" width="600" />
     </p>
 </body>
 </html>
