--- a/Tarkvara-arendusprotsess/SDLC/info.html
+++ b/Tarkvara-arendusprotsess/SDLC/info.html
@@ -24,16 +24,12 @@
         <br />
         Potensiaalsed vead:<br />
         <br />
-        Kompleksne õppimiskõver uute kasutajate jaoks<br />
-        Sobivus sõltub projekti vajadustest<br />
-        Koodigeneratsiooni võimalikud ebatäpsused<br />
+        Ebapiisav standardiseeritus - erinevate tootjate vahendid ei pruugi ühilduda ega olla võimelised infot vahetama - näiteks andmete klassifikatsioonid on erinevad, failiformaatide konverteerimine pole ökonoomne. See sunnib kasutama sama tootja vahendeid<br />
         <br />
-        CASE-vahendid on oluline osa tarkvaraarenduse elutsüklist, võimaldades kiiremat, tõhusamat ja paremini hallatavat arendusprotsessi. <br />
-        Nende valik sõltub projekti nõuetest ja meeskonna eelistustest.<br />
+        Ebareaalsed ootused - firmad võtavad CASE-vahendid kasutusel selleks, et vähendada arenduskulusid. Kuid alguses on kulutused just suured, sest võimekamad CASE-vahendid on reeglina kallid. Arvestada tuleb üsna pika tasuvuse perioodiga. Lisaks tuleb mõelda ka uutele strateegiatele CASE-vahendeid kasutades.<br />
         <br />
-        Näited:
+        Aeglane rakendumine - CASE tehnika rakendamine võib oluliselt muuta harjumuslikku arenduskeskkonda. Reeglina ei soovitata esimest korda kasutada CASE-vahendit kriitiliste projektide ja lühikeste tähtaegade korral, sest vahendite kasutamine nõuab õppimist. Ehk siis alustada tuleks väikestest projektidest.<br />
         <br />
-        Rational Rose, Star UML, and Microsoft Visio
     </p>
 
 </body>
