--- a/Tarkvara-arendusprotsess/SDLC/proge.html
+++ b/Tarkvara-arendusprotsess/SDLC/proge.html
@@ -12,57 +12,56 @@
     <p>
         1. Behavior-Driven Development (BDD):<br />
         <br />
-        It is a software development process that encourages collaboration among developers, quality assurance experts, and customer representatives in a software project.<br />
-        It encourages teams to use conversation and concrete examples to formalize a shared understanding of how the application should behave.<br />
+        See on tarkvaraarendusprotsess, mis julgustab tarkvaraprojekti arendajate, kvaliteedi tagamise ekspertide ja klientide esindajate vahelist koostööd.<br />
+        See julgustab meeskondi kasutama vestlust ja konkreetseid näiteid, et vormistada ühine arusaam sellest, kuidas rakendus peaks käituma.<br />
         <br />
         2. Design-Driven Development:<br />
         <br />
-        Design-driven development (DDD) places design at the forefront of product creation.<br />
-        Rather than treating design as a mere aesthetic afterthought, DDD emphasizes its pivotal role in dictating the direction and functionality of software.<br />
+        Disainipõhine arendus (DDD) asetab disaini toodete loomisel esikohale.<br />
+        Selle asemel, et käsitleda disaini pelgalt esteetilise järelmõttena, rõhutab DDD selle keskset rolli tarkvara suuna ja funktsionaalsuse määramisel.<br />
         <br />
         3. Domain-Driven Design (DDD):<br />
         <br />
-        Domain-driven design (DDD) is a major software design approach, focusing on modeling software to match a domain according to input from that domain's experts.<br />
-        Under domain-driven design, the structure and language of software code (class names, class methods, class variables) should match the business domain. <br />
-        For example: if software processes loan applications, it might have classes like "loan application", "customers", and methods such as "accept offer" and "withdraw".<br />
+        Domeenipõhine disain (DDD) on peamine tarkvara kujundamise lähenemisviis, mis keskendub tarkvara modelleerimisele, et see sobiks domeeniga vastavalt selle domeeni ekspertide sisendile.<br />
+        Domeenipõhise disaini korral peaks tarkvarakoodi struktuur ja keel (klassinimed, klassimeetodid, klassimuutujad) ühtima ärivaldkonnaga. <br />
+        Näiteks: kui tarkvara töötleb laenutaotlusi, võivad sellel olla sellised klassid nagu "laenutaotlus", "kliendid" ja sellised meetodid nagu "aksepteeri pakkumine" ja "taganemine".<br />
         <br />
         4. Secure by Design:<br />
         <br />
-        Secure by design, in software engineering, means that software products and capabilities have been designed to be foundationally secure.<br />
-        Alternate security strategies, tactics and patterns are considered at the beginning of a software design,<br />
-        and the best are selected and enforced by the architecture, and they are used as guiding principles for developers.<br />
-        It is also encouraged to use strategic design patterns that have beneficial effects on security, even though those design patterns were not originally devised with security in mind.<br />
+        Disainiliselt turvaline tähendab tarkvaratehnikas seda, et tarkvaratooted ja võimalused on loodud põhimõtteliselt turvaliseks.<br />
+        Alternatiivseid turvastrateegiaid, -taktikaid ja -mustreid võetakse arvesse tarkvara kavandamise alguses,<br />
+        parimad valib välja ja jõustab arhitektuur ning neid kasutatakse arendajate jaoks juhtpõhimõtetena.<br />
+        Samuti soovitatakse kasutada strateegilisi disainimustreid, millel on turvalisusele kasulik mõju, kuigi need kujundusmustrid ei ole algselt välja töötatud turvalisust silmas pidades.<br />
         <br />
         5. Test-Driven Development (TDD):<br />
         <br />
-        Test Driven Development (TDD) is a software development approach where tests are written before the actual code.<br />
-        It offers several advantages: Comprehensive Test Coverage: TDD ensures that all new code is covered by at least one test, leading to more robust software.<br />
+        Test Driven Development (TDD) on tarkvaraarendusviis, kus testid kirjutatakse enne tegelikku koodi.<br />
+        Sellel on mitmeid eeliseid. Põhjalik testikate: TDD tagab, et kogu uus kood on kaetud vähemalt ühe testiga, mis toob kaasa tugevama tarkvara.<br />
         <br />
         6. Acceptance Test-Driven Development (ATDD):<br />
         <br />
-        Analogous to test-driven development, Acceptance Test Driven Development (ATDD)<br />
-        involves team members with different perspectives (customer, development, testing)<br />
-        collaborating to write acceptance tests in advance of implementing the corresponding functionality.<br />
+        Analoogselt testipõhise arendusega, aktsepteerimistestipõhise arendusega (ATDD)<br />
+        kaasab erinevate vaatenurkadega meeskonnaliikmeid (klient, arendus, testimine)<br />
+        koostöös vastuvõtutestide kirjutamiseks enne vastava funktsionaalsuse juurutamist.<br />
         <br />
         7. Continuous Test-Driven Development (CTDD):<br />
         <br />
-        Continuous test-driven development (CTDD) is a software development practice that extends test-driven development (TDD) by means of automatic test execution in the background, sometimes called continuous testing.<br />
+        Pidev testipõhine arendus (CTDD) on tarkvaraarenduse tava, mis laiendab testipõhist arendust (TDD) taustal automaatse testimise abil, mida mõnikord nimetatakse pidevaks testimiseks.<br />
         <br />
 
         8. Specification by Example:<br />
         <br />
-        Specification by example (SBE) is a collaborative approach to defining requirements and business-oriented functional tests for software products based on capturing and illustrating requirements using realistic examples instead of abstract statements.<br />
-        <br />
+        Näidiste järgi spetsifikatsioon (SBE) on koostööpõhine lähenemine tarkvaratoodete nõuete ja ärile suunatud funktsionaalsete testide määratlemisele, mis põhineb nõuete hõivamisel ja illustreerimisel, kasutades abstraktsete väidete asemel realistlikke näiteid.<br />        <br />
         9. Data-Driven Development:<br />
         <br />
-        Data-driven software development is based on solid metrics like Key Performance Indicators (KPIs) or Objectives And Key Results (OKRs).<br />
-        Clear, objective, and unambiguous, these metrics encourage dev teams to think about the long-term strategic objectives of their day-to-day work and the business value of each project.<br />
+        Andmepõhine tarkvaraarendus põhineb kindlatel mõõdikutel, nagu peamised jõudlusnäitajad (KPI) või eesmärgid ja võtmetulemused (OKR).<br />
+        Need selged, objektiivsed ja ühemõttelised mõõdikud julgustavad arendajate meeskondi mõtlema oma igapäevase töö pikaajalistele strateegilistele eesmärkidele ja iga projekti ärilisele väärtusele.<br />
         <br />
 
         10. Data-Oriented Design:<br />
         <br />
-        Data-oriented design is a software design approach that focuses on organizing data in a way that makes it easy to access and manipulate.<br />
-        It is based on the idea that data should be the primary focus of a program, rather than the operations or transformations performed on that data.<br />
+        Andmetele orienteeritud disain on tarkvara kujundamise lähenemisviis, mis keskendub andmete korraldamisele viisil, mis muudab nendele juurdepääsu ja nendega manipuleerimise lihtsaks.<br />
+        See põhineb ideel, et programmi põhirõhk peaksid olema andmetel, mitte nende andmetega tehtavatel toimingutel või teisendustel.<br />
     </p>
 </body>
 </html>
