--- a/Tarkvara-arendusprotsess/SDLC/Textual.html
+++ b/Tarkvara-arendusprotsess/SDLC/Textual.html
@@ -20,14 +20,19 @@
         Visual Studio kasutab Microsofti tarkvaraarendusplatvorme, nagu Windows API, Windows Forms, Windows Presentation Foundation, Windows Store ja Microsoft Silverlight. <br />
         See võib toota nii omakoodi kui ka hallatud koodi.<br />
         <br />
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTqJ4JNIKuIVqmtF2__M_FqopygMQcH9tzrM69UOrZTw&s" height="500" width="600" />
+        <img src="https://learn.microsoft.com/en-us/visualstudio/ide/media/visual-studio-integrated-development-environment.png?view=vs-2022" height="500" width="600" />
         <h3>Bugzilla:</h3>
         Bugzilla on tugev, funktsioonikas ja küps defektide või vigade jälgimise süsteem. <br />
         Defektide jälgimise süsteemid võimaldavad arendajate meeskondadel oma toodetes tõhusalt jälgida silmapaistvaid vigu, probleeme, probleeme, täiustusi ja muid muudatusi. <br />
         Lihtsad defektide jälgimise võimalused on sageli sisse ehitatud integreeritud lähtekoodihalduskeskkondadesse, nagu GitHub või muudesse veebipõhistesse või lokaalselt installitud ekvivalentidesse. <br />
         Leiame, et organisatsioonid pöörduvad Bugzilla poole, kui nende süsteemide võimalused kasvavad välja – näiteks seetõttu, et nad soovivad töövoohaldust või vigade nähtavuse kontrolli (turvalisust) või kohandatud välju.<br />
         <br />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Buggie_new.png" height="500" width="600" />
+        <img src="https://sc.filehippo.net/images/t_app-cover-m,f_auto/p/897865d6-9b2a-11e6-aa4d-00163ed833e7/2302213905/bugzilla-screenshot.png" height="500" width="600" />
+        <h3>Accompa:</h3>
+        Accompa on pilvepõhine lahendus, mis aitab igas suuruses ettevõtetel luua, jälgida ja hallata nõudeid, funktsioone ja kasutusjuhtumeid mitme toote ja projekti raames. <br />
+        See võimaldab klientidel ja sisemistel sidusrühmadel saata funktsioonitaotlusi e-posti ja veebipõhiste kohandatud vormide kaudu.<br />
+        <br />
+        <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductScreenshot/b79c326b-6400-4b98-ba0f-5b0b4b0cf09f.jpg" height="500" width="600" />
     </p>
 </body>
 </html>
