--- a/Tarkvara-arendusprotsess/SDLC/uml.html
+++ b/Tarkvara-arendusprotsess/SDLC/uml.html
@@ -19,9 +19,9 @@
 <li><b>Package Diagram:</b> diagrammide tüübid, mis lihtsustavad keerukat klassidiagrammi, rühmitades klassid pakettidena.</li>
         <img src="https://image.slidesharecdn.com/uml2-110216035339-phpapp01/95/uml2-13-728.jpg" width="500" height="600" />
         <li><b>Class Diagram:</b> objekt või objektide kogum, millel on ühine struktuur ja käitumine</li>
-        <img src=" https://2107204891-files.gitbook.io/~/files/v0/b/gitbook-legacy-files/o/assets%2F-L9shwSMiocGHpSKcbss%2F-MICRkvtgCev38ZdEOzz%2FUCUN6%2DEOzz%2FUWDgrams !UML%20Property_6.png?alt=media&token=cc7829d2-8dac-45fa-a4c9-00745fd212f8" width="500" height="600" />
+        <img src="https://miro.medium.com/v2/resize:fit:1400/1*TYRSuON0vVxy8olllrBVEw.png" width="500" height="600" />
         <li><b>Deployment Diagram:</b> UML-i diagrammide tüüp, mis modelleerib artefaktide füüsilist juurutamist sõlmedes.</li>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fdevcamp-pictures%2FUML%2Bimages%2FScreen% 2BShot%2B2017-10-16%2Bat%2B3.58.01%2BPM.png&f=1&nofb =1&ipt =1057232f8cd0148f41b6b2a18e6f2f745b237645543 ="59pogesed89pogesed89pogesed 500" height="600" />
+        <img src="https://d2slcw3kip6qmk.cloudfront.net/marketing/pages/chart/uml/deployment-diagram/deployment-diagram-example-700x412@2x.jpeg" width="500" height="600" />
         <li><b>Object Diagram:</b> staatiline objektiskeem on klassiskeemi eksemplar; see näitab hetkepilti süsteemi üksikasjalikust olekust teatud ajahetkel. </li>
         <img src="https://images.edrawmax.com/images/knowledge/uml-object-diagram/object-model.jpg" width="500" height="600" />
         <li><b>Component Diagram:</b> diagramm, mis visualiseerib süsteemi komponentide korraldust ja nendevahelisi sõltuvussuhteid </li>
