--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -17,6 +17,8 @@
         <li><a href="index2.html" id="ilinkcolor">Case</a></li>
         <li><a href="proge.html" id="prlinkcolor">Programmeerimisstiilid</a></li>
         <li><a href="uml.html" id="ulinkcolor">UML Diagrammid</a></li>
+        <li><a href="erds.html" id="ulinkcolor">ERD</a></li>
+
 
 
     </ul>
