--- a/Tarkvara-arendusprotsess/SDLC/erd3.html
+++ b/Tarkvara-arendusprotsess/SDLC/erd3.html
@@ -17,11 +17,11 @@
         </p>
 
         <h3>IDEF1Xi stiil</h3>
-        <img src="images/p4444ilt-removebg-preview.png">
+        <img src="images/IDEF.png">
         <h3>Bachmani stiil</h3>
-        <img src="images/pilt-re33333movebg-preview.png">
+        <img src="images/BACH.png">
         <h3>Cheni stiil</h3>
-        <img src="images/pilt-removebg-preview.png">
+        <img src="images/CHEN.png">
 
 
     </div>
