--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -18,6 +18,7 @@
         <li><a href="proge.html" id="prlinkcolor">Programmeerimisstiilid</a></li>
         <li><a href="uml.html" id="ulinkcolor">UML Diagrammid</a></li>
         <li><a href="erds.html" id="ulinkcolor">ERD</a></li>
+        <li><a href="BitCoinAppIndex.html" id="btc">Bitcoin</a></li>
 
 
 
