--- a/Tarkvara-arendusprotsess/SDLC/erd2.html
+++ b/Tarkvara-arendusprotsess/SDLC/erd2.html
@@ -27,15 +27,15 @@
         <p>
             Kardinaalsust saab kujutada vaadetena "look-across" või "same-side", sõltuvalt sellest, kus sümbolid on kujutatud. Lisaks määratlevad minimaalsed või maksimaalsed arvud suhte kohta.
         </p>
-        <h3>Entiteedid</h3>
+        <h3>Olemid</h3>
         <p>
             Need on määratletavad asjad, nagu inimesed, objektid või kontseptsioonid, mille kohta saab andmeid salvestada. Entiteedid võib mõelda nimisõnadena. Näited hõlmavad kliente, üliõpilasi, autosid või tooteid. Tavaliselt kujutatakse neid ristkülikuna.
         </p>
-        <h3>Entiteeditüüp:</h3>
+        <h3>Olemitüüp:</h3>
         <p>
             See on grupp definitsiooniga asju, nagu üliõpilased või sportlased. Entiteet on konkreetne üksus selles grupis. Näiteks, kliendid, autod või tooted.
         </p>
-        <h3>Entiteedihulk:</h3>
+        <h3>Olkemihulk:</h3>
         <p>
             See on sama mis entiteeditüüp, kuid määratletud kindlal ajahetkel. Näiteks, üliõpilased, kes on esimesel päeval kursusele registreunud. Seotud termin on instants, kus konkreetne üksus oleks entiteedihulga instants.
         </p>
