--- a/Tarkvara-arendusprotsess/SDLC/erd3.html
+++ b/Tarkvara-arendusprotsess/SDLC/erd3.html
@@ -22,6 +22,9 @@
         <img src="images/BACH.png">
         <h3>Cheni stiil</h3>
         <img src="images/CHEN.png">
+        <h3>Tavaline stiil</h3>
+        <img src="images/tavaline.png">
+
 
 
     </div>
