--- a/Tarkvara-arendusprotsess/SDLC/erd3.html
+++ b/Tarkvara-arendusprotsess/SDLC/erd3.html
@@ -23,7 +23,7 @@
         <h3>Cheni stiil</h3>
         <img src="images/CHEN.png">
         <h3>Tavaline stiil</h3>
-        <img src="images/tavaline.png">
+        <img src="images/tavaline.jpg">
 
 
 
