--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -19,6 +19,8 @@
         <li><a href="uml.html" id="ulinkcolor">UML Diagrammid</a></li>
         <li><a href="erds.html" id="ulinkcolor">ERD</a></li>
         <li><a href="BitCoinAppIndex.html" id="btc">Bitcoin</a></li>
+        <li><a href="libre.html" id="lib">ProjectLibre</a></li>
+
 
 
 
