--- a/Tarkvara-arendusprotsess/SDLC/libre.html
+++ b/Tarkvara-arendusprotsess/SDLC/libre.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waterfall</title>
+    <title>ProjectLibre</title>
 </head>
 <body>
     <h1>Project Details</h1>
-    <p>Click the link below to view the project details:</p>
-    <a href="ProjectDetails.pdf" target="_blank">View Project Details</a>
+    <li>
+        <a href="file:///C:/Users/opilane/source/repos/Tarkvara-arendusprotsess/Tarkvara-arendusprotsess/SDLC/details.html">Details Page</a>
+        <br />
+        <br />
+        <a href="file:///C:/Users/opilane/source/repos/Tarkvara-arendusprotsess/Tarkvara-arendusprotsess/SDLC/WhoDoesWhat.html">Who Does What Page</a>
+        <br />
+        <br />
+        <a href="https://github.com/MDRobinZT/ProjectLibre" target="_blank">GitHub Repo</a>
+    </li>
 </body>
 </html>
