--- a/Tarkvara-arendusprotsess/SDLC/libre.html
+++ b/Tarkvara-arendusprotsess/SDLC/libre.html
@@ -7,14 +7,18 @@
 </head>
 <body>
     <h1>Project Details</h1>
-    <li>
-        <a href="file:///C:/Users/opilane/source/repos/Tarkvara-arendusprotsess/Tarkvara-arendusprotsess/SDLC/details.html">Details Page</a>
-        <br />
-        <br />
-        <a href="file:///C:/Users/opilane/source/repos/Tarkvara-arendusprotsess/Tarkvara-arendusprotsess/SDLC/WhoDoesWhat.html">Who Does What Page</a>
-        <br />
-        <br />
-        <a href="https://github.com/MDRobinZT/ProjectLibre" target="_blank">GitHub Repo</a>
-    </li>
+    <ul>
+        <li>
+            <a href="details.html">Details Page</a>
+            <br />
+            <br />
+        <li>
+            <a href="WhoDoesWhat.html">Who Does What Page</a>
+            <br />
+            <br />
+        <li>
+            <a href="https://github.com/MDRobinZT/ProjectLibre" target="_blank">GitHub Repo</a>
+
+    </ul>
 </body>
 </html>
