--- a/Tarkvara-arendusprotsess/SDLC/libre.html
+++ b/Tarkvara-arendusprotsess/SDLC/libre.html
@@ -9,7 +9,7 @@
     <h1>Project Details</h1>
     <ul>
         <li>
-            <a href="details.html">Details Page</a>
+            <a href="Details.html">Details Page</a>
             <br />
             <br />
         <li>
@@ -17,7 +17,7 @@
             <br />
             <br />
         <li>
-            <a href="https://github.com/MDRobinZT/ProjectLibre" target="_blank">GitHub Repo</a>
+            <a href="veebileht.pod" target="_blank">Salvesta Projekt</a>
 
     </ul>
 </body>
