--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -20,6 +20,8 @@
         <li><a href="erds.html" id="ulinkcolor">ERD</a></li>
         <li><a href="BitCoinAppIndex.html" id="btc">Bitcoin</a></li>
         <li><a href="libre.html" id="lib">ProjectLibre</a></li>
+        <li><a href="BUSSID.html" id="lib">Bussid</a></li>
+
 
 
 
