--- a/Tarkvara-arendusprotsess/SDLC/Bussid.html
+++ b/Tarkvara-arendusprotsess/SDLC/Bussid.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <h1>Githubi link:</h1>
-        <a href="https://github.com/MDRobinZT/Tarkvara-arendusprotsess" target="_blank">Vajuta</a><br /><br />
+        <a href="https://github.com/MDRobinZT/WinForm" target="_blank">Vajuta</a><br /><br />
         <img src="BUSSID.png" />
     </div>
 </body>
