--- a/Tarkvara-arendusprotsess/SDLC/index.html
+++ b/Tarkvara-arendusprotsess/SDLC/index.html
@@ -20,7 +20,7 @@
         <li><a href="erds.html" id="ulinkcolor">ERD</a></li>
         <li><a href="BitCoinAppIndex.html" id="btc">Bitcoin</a></li>
         <li><a href="libre.html" id="lib">ProjectLibre</a></li>
-        <li><a href="BUSSID.html" id="lib">Bussid</a></li>
+        <li><a href="Bussid.html" id="lib">Bussid</a></li>
 
 
 
